--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,11 +7,95 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-size: 18px;
 }
 a {
   color: inherit;
   text-decoration: none;
 }
+.carlistContainer {
+  padding: 60px;
+  width: 80vw;
+  margin: 0 auto;
+}
+.carlistHeading {
+  margin-bottom: 20px;
+  color: brown;
+}
+.carList {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+.carCard {
+  width: 300px;
+  padding: 20px;
+  padding-bottom: 50px;
+  background-color: burlywood;
+  border-radius: 12px;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+.carCard:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.carcontainer {
+  width: 350px;
+  margin: 0 auto;
+  margin-top: 100px;
+  background: burlywood;
+  border-radius: 16px;
+  padding: 20px;
+  cursor: pointer;
+}
+.carcontainer:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+hr {
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+.carName {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.goToBackBtn {
+  margin-top: 15px;
+  font-size: 18px;
+  padding: 8px 40px;
+  border-radius: 12px;
+  border: none;
+  background: blue;
+  color: aliceblue;
+}
+.goToBackBtn:hover {
+  background: rgb(47, 47, 180);
+  cursor: pointer;
+}
+#carColor {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+  justify-content: space-between;
+}
+#carColor span,
+.carCard .indicator {
+  display: block;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+}
+.carCard .indicator {
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 10px;
+  height: 10px;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
